[package]
name = "async_rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
tonic = { version = "0.10.2", features = ["transport"] }
prost = "0.12.3"
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "sqlite"] }
rusqlite = "0.30.0"
leaky-bucket = "1.0.1"


[build-dependencies]
tonic-build = "0.10.2"
